# ChangeLog for app-sci/lin-seti
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-sci/lin-seti/ChangeLog,v 1.8 2003/07/12 10:13:07 tantive Exp $

*lin-seti-0.7.5 (12 Jul 2003)

  12 Jul 2003; Michael Imhof <tantive@gentoo.org> :
  lin-seti-0.7.4.ebuild:
  Version bumped

*lin-seti-0.7.4 (10 Jul 2003)

  10 Jul 2003; Michael Imhof <tantive@gentoo.org> :
  lin-seti-0.7.4.ebuild:
  Version bumped

  12 Jun 2003; <msterret@gentoo.org> lin-seti-0.7.2.ebuild,
  lin-seti-0.7.3.ebuild:
  add Header

*lin-seti-0.7.3 (15 Apr 2003)

  15 Apr 2003; Michael Imhof <tantive@gentoo.org> :
  Version bumped, thanks to Noberasco Michele <michele.noberasco@tiscali.it>.
  Should close #19111.
  
*lin-seti-0.7.2 (02 Apr 2003)

  02 Apr 2003; Michael Imhof <tantive@gentoo.org> :
  Version bumped, thanks to Noberasco Michele <michele.noberasco@tiscali.it>.
  Note: users upgrading from versions prior to 0.7 must update
  their config files, otherwise the program will not run.

*lin-seti-0.6.1 (19 Mar 2003)

  20 Mar 2003; Michael Imhof <tantive@gentoo.org> :
  Unmasked for x86 and sparc. Closes #17828

  19 Mar 2003; Michael Imhof <tantive@gentoo.org> :
  Initial release.
  This ebuild was submitted by Noberasco Michele <michele.noberasco@tiscali.it>.
  Should close #17828.

