@@ -1,6 +1,6 @@
-MD5 ca179e3f4ddeafe38ed865ce4f13417b ChangeLog 1341
+MD5 fcf024e53cfbf32a1c229d2adccc674d ChangeLog 1483
 MD5 95138731707ae04b1c65aaac4bb6d12f lin-seti-0.7.5.ebuild 1340
-MD5 95138731707ae04b1c65aaac4bb6d12f lin-seti-0.7.6.ebuild 1340
+MD5 4b3a0052d9924ad7a62f9dc4ab06e72c lin-seti-0.7.6.ebuild 1339
 MD5 36f55af924da269ce9032c8076a11d5b lin-seti-0.7.3.ebuild 1340
 MD5 aad2900c6c3874bebeafa8620ce8a9cc lin-seti-0.7.4.ebuild 1342
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
